# products-backend

./: .env  .env.prod  .pre-commit-config.yaml  db.sqlite3  manage.py  pyproject.bak.toml  pyproject.toml  scaffold.ps1  task.ps1
accounting/api/: errors.py  routers.py
accounting/application/: dto.py  policies.py
accounting/domain/: entities.py  errors.py  events.py  rules.py  services.py
accounting/infrastructure/: mappers.py  models.py  outbox.py  repositories.py  tasks.py
accounting/tests/: __init__.py
advertising/: apps.py
advertising/api/: errors.py
advertising/application/: dto.py  policies.py
advertising/domain/: entities.py  errors.py  events.py  rules.py  services.py
advertising/infrastructure/: mappers.py  models.py  outbox.py  repositories.py  tasks.py
advertising/tests/: __init__.py
apps/actuarial/: apps.py
apps/core_auth/: urls.py
apps/reinsurance/: apps.py
audit/api/: errors.py
audit/application/: dto.py  policies.py
audit/domain/: entities.py  errors.py  events.py  rules.py  services.py
audit/infrastructure/: mappers.py  models.py  outbox.py  repositories.py  tasks.py
audit/tests/: __init__.py
catalog/api/: errors.py  routers.py
catalog/application/: dto.py  policies.py
catalog/domain/: entities.py  errors.py  events.py  rules.py  services.py
catalog/infrastructure/: mappers.py  models.py  outbox.py  repositories.py  tasks.py
catalog/tests/: __init__.py
config/: admin.py  settings.py.bak  urls.py
expediente/: apps.py
incentives/: apps.py
security/: admin.py  apps.py
stg/: apps.py
stg/api/: errors.py
(+216 files in other folders)
